# cpu2os

./: .gitignore  README.md  ref.md
00-書籍/CPU2OS/: 00.0-目錄.md
00-書籍/CUDA程式書/: 00.0-目錄.md  01.1-GPU計算與CUDA的歷史背景.md  01.2-GPU與CPU的架構差異.md  01.3-CUDA開發環境設定（Windows、Linux）.md  02.1-CUDA的基本程式結構.md  02.2-核心函數（Kernel）與執行配置.md  02.3-記憶體模式：主機端與裝置端.md  03.1-使用 `nvcc` 編譯CUDA程式.md  03.2-CUDA-GDB與Nsight調試工具.md  03.3-性能分析工具：NsightCompute與Nsight Systems.md  04.1-佇列（Thread）、區塊（Block）與網格（Grid）的概念.md  04.2-ThreadID與BlockID計算.md  04.3-執行配置的設計與優化.md  05.1-全域記憶體與共享記憶體.md  05.2-常數記憶體與紋理記憶體.md  05.3-記憶體對齊與性能考量.md  06.1-佇列同步與 `__syncthreads()`.md  06.2-原子操作（Atomic Operations）.md  06.3-鎖與競態條件問題.md  07.1-資源利用率與指令吞吐量.md  07.2-記憶體傳輸優化.md  07.3-共用記憶體的效能提升.md  08.1-Warp的執行與分支發散.md  08.2-透過條件運算優化分支執行.md  08.3-指令流的合併技巧.md  (+33 more)
01-硬體/: Gustafson法則.md  README.md  考題.md
01-計算機結構/: Amdahl法則.md  Gustafson法則.md  README.md
02-系統程式/A1-資料庫/01-tinysql/tinysql/: CMakeLists.txt  Makefile  README.md  mydb.db
02-系統程式/A1-資料庫/01-tinysql/tinysql/src/: cursor.c  db.h  execute.c  input.c  main.c  node.c  pager.c  table.c  utils.c
02-系統程式/A1-資料庫/01-tinysql/tinysql/test/: test_base.py  test_insert.py
03-EDA/: README.md
04-riscv/: RISC-V上的開發工具.md
07-nand2tetris/: ChatGPT.md  README.md
A1-C語言/: README.md
A3-參考文件/: 參考資源.md
A4-參考專案/: README.md
A5-速度議題/: 脈動陣列.md
A8-問題解答/: 邊緣觸發為何要用主從式設計.md
A9-zig語言/: README.md  沒有區塊式註解.md
_bookgpt/: 00.0-目錄.md
_nand2tetris/: AI對話.md  README.md  參考專案.md
書/: 01-編譯器概述.md  04-語義分析.md  05-目標代碼生成.md  06-符號表和執行時環境.md  07-優化技術.md  08-工具和框架.md  09-編譯器的應用.md  A1-本書的寫作方法.md
(+1802 files in other folders)
